@@ -29,7 +29,7 @@ data:extend({
     collision_box = { { -0.79, -0.79 }, { 0.79, 0.7 } },
     selection_box = { { -1.0, -1.0 }, { 1.0, 1.0 } },
     fluid_box = {
-      volume = constants.volume / 4,
+      volume = constants.volume * 2,
       pipe_connections = {
         { direction = defines.direction.north, connection_category = "ducts", position = { 0, -0.5 } },
         {
