@@ -6,6 +6,9 @@ Date: ????
   Changes:
     - Updated to Factorio 2.0.
     - Updated several internal names to match the display names.
+  Balancing:
+    - Reduced duct volume by 4x.
+    - Reduced pumping speeds by 10x.
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.5
 Date: 2023-05-09
